# llm-eval-ops

./: .gitignore  README.md  pyproject.toml
api/src/: __init__.py  main.py
api/src/evals/: __init__.py  contracts.py  gates.py  runner.py  scorers.py
api/src/model/: __init__.py  contracts.py
api/src/observability/: __init__.py  tracing.py
api/src/prompts/: __init__.py  registry.py
api/src/services/: __init__.py  human_review_router.py  kb_service.py  llm_judge_service.py  metrics_service.py  model_service.py  offline_eval_export_service.py  online_control_service.py  qa_service.py  retrieval_service.py  run_service.py  storage_service.py  ui_service.py  validation_service.py
api/src/tests/: conftest.py  test_api.py  test_evals.py  test_llm_judge.py  test_offline_eval_export.py  test_offline_gates.py  test_online_control.py
data/: eval_dataset.json  kb.json  offline_gate_policy.json  online_alert_policy.json
docs/: architecture.md
ui/src/: streamlit_app.py  ui_api.py  ui_config.py  ui_utils.py
ui/src/pages/: inference_page.py  offline_gates_page.py  online_control_page.py  review_queue_page.py  run_explorer_page.py
