[project]
name = "llm-eval-ops"
version = "0.1.0"
description = "LLM Eval Ops: a production-like reference implementation for online scoring, offline evals, traces, and review routing for LLM systems."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "pydantic>=2.11.0",
    "uvicorn>=0.35.0",
    "streamlit>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
openai = [
    "openai>=1.40.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "api/src"}
packages = [
    "evals",
    "model",
    "services",
    "observability",
    "prompts",
]
py-modules = ["main"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["api/src/tests"]
